Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 
     <section class="main-content">
       <h1>
-<a id="markdownify" class="anchor" href="#markdownify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Markdownify</h1>
+<a id="electron-markdownify" class="anchor" href="#electron-markdownify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Electron Markdownify</h1>
 
-<p><strong>A minimal Markdown Editor</strong></p>
+<blockquote>
+<p>A minimal Markdown Editor</p>
+</blockquote>
 
-<p>This is a minimal Markdown Editor based on <a href="http://electron.atom.io">Electron</a>.</p>
+<p>This is a minimal Markdown Editor desktop app based on <a href="http://electron.atom.io">Electron</a>.</p>
 
 <p><img src="https://raw.githubusercontent.com/amitmerchant1990/electron-markdownify/master/img/markdownify.gif" alt="screenshot"></p>
 
@@ -36,6 +38,11 @@
 <pre><code>$&gt; cd PATH-TO-MARKDOWNIFY-DESKTOP-APP
 $&gt; npm install &amp;&amp; npm start
 </code></pre>
+
+<h2>
+<a id="library-used" class="anchor" href="#library-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Library Used</h2>
+
+<p><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></p>
 
 <h4>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h4>
