Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -40,9 +40,17 @@ $&gt; npm install &amp;&amp; npm start
 </code></pre>
 
 <h2>
-<a id="library-used" class="anchor" href="#library-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Library Used</h2>
+<a id="tools-used" class="anchor" href="#tools-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools Used</h2>
 
-<p><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></p>
+<p>Electron Markdownify is built on:</p>
+
+<ul>
+<li><a href="http://electron.atom.io/">Electron</a></li>
+<li><a href="https://nodejs.org/">Node.js</a></li>
+<li>a little bit of <a href="https://jquery.com/">jQuery</a>
+</li>
+<li><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></li>
+</ul>
 
 <h4>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License</h4>
