Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
     <section class="main-content">
       <h1>
-<a id="electron-markdownify" class="anchor" href="#electron-markdownify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Electron Markdownify</h1>
+<a id="electron-markdownify-" class="anchor" href="#electron-markdownify-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Electron Markdownify <a href="https://badge.fury.io/js/electron-markdownify"><img src="https://badge.fury.io/js/electron-markdownify.svg" alt="npm version"></a>
+</h1>
 
 <blockquote>
 <p>A minimal Markdown Editor</p>
@@ -33,11 +34,20 @@
 <h2>
 <a id="how-to-use" class="anchor" href="#how-to-use" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>How To Use</h2>
 
+<p>Install it using : <code>npm install electron-markdownify</code></p>
+
+<p><em>Or</em></p>
+
 <p>Download this project, and run</p>
 
 <pre><code>$&gt; cd PATH-TO-MARKDOWNIFY-DESKTOP-APP
 $&gt; npm install &amp;&amp; npm start
 </code></pre>
+
+<h2>
+<a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h2>
+
+<p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.1">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
 
 <h2>
 <a id="tools-used" class="anchor" href="#tools-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools Used</h2>
@@ -50,6 +60,7 @@ $&gt; npm install &amp;&amp; npm start
 <li>a little bit of <a href="https://jquery.com/">jQuery</a>
 </li>
 <li><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></li>
+<li><a href="http://showdownjs.github.io/showdown/">showdown</a></li>
 </ul>
 
 <h4>
