--- a/index.html
+++ b/index.html
@@ -19,15 +19,26 @@
     </section>
 
     <section class="main-content">
-      <h1>
-<a id="electron-markdownify-" class="anchor" href="#electron-markdownify-" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Electron Markdownify <a href="https://badge.fury.io/js/electron-markdownify"><img src="https://badge.fury.io/js/electron-markdownify.svg" alt="npm version"></a>
+      <h1 align="center">
+<a id="--------electron-markdownify--" class="anchor" href="#--------electron-markdownify--" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+  <br>
+  <a href="http://www.amitmerchant.com/electron-markdownify"><img src="https://raw.githubusercontent.com/amitmerchant1990/electron-markdownify/master/img/markdownify.png" alt="Markdownify" width="200"></a>
+  <br>
+  Electron Markdownify
+  <br>
 </h1>
 
-<blockquote>
-<p>A minimal Markdown Editor</p>
-</blockquote>
+<h4 align="center">
+<a id="this-is-a-minimal-markdown-editor-desktop-app-based-on-electron" class="anchor" href="#this-is-a-minimal-markdown-editor-desktop-app-based-on-electron" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>This is a minimal Markdown Editor desktop app based on <a href="http://electron.atom.io">Electron</a>.</h4>
 
-<p>This is a minimal Markdown Editor desktop app based on <a href="http://electron.atom.io">Electron</a>.</p>
+<p align="center">
+  <a href="https://badge.fury.io/js/electron-markdownify">
+    <img src="https://badge.fury.io/js/electron-markdownify.svg" alt="Gitter">
+  </a>
+  
+</p>
+
+<p><br></p>
 
 <p><img src="https://raw.githubusercontent.com/amitmerchant1990/electron-markdownify/master/img/markdownify.gif" alt="screenshot"></p>
 
