Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <a href="https://badge.fury.io/js/electron-markdownify">
     <img src="https://badge.fury.io/js/electron-markdownify.svg" alt="Gitter">
   </a>
-  
+
 </p>
 
 <p><br></p>
@@ -56,6 +56,17 @@ $&gt; npm install &amp;&amp; npm start
 </code></pre>
 
 <h2>
+<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
+
+<ul>
+<li>Preview Markdown and generate its relevant HTML.</li>
+<li>Syntax highlighting</li>
+<li>Dark/Light mode</li>
+<li>Live preview</li>
+<li>Cross platform</li>
+</ul>
+
+<h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h2>
 
 <p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.1">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
@@ -72,6 +83,7 @@ $&gt; npm install &amp;&amp; npm start
 </li>
 <li><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></li>
 <li><a href="http://showdownjs.github.io/showdown/">showdown</a></li>
+<li><a href="http://codemirror.net/">CodeMirror</a></li>
 </ul>
 
 <h4>
