--- a/index.html
+++ b/index.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Markdownify</title>
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/codemirror.css">
-    <link rel="stylesheet" href="css/base16-dark.css">
-</head>
-<body class="container-fluid">
-    <div style="position:fixed;top: 0;left: 0;z-index: 999;width: 100%;height: 23px;">
-      <div class="mode">
-        <input type="radio" name="changeTheme" value="light" onclick="changeTheme(this);" checked="checked"> <b>Light</b>
-        <input type="radio" name="changeTheme" value="dark" onclick="changeTheme(this);"> <b>Dark</b>
-      </div>
-      <div class="pref">
-        <input type="radio" name="showPreference" value="html" onclick="clkPref(this);"> <b>HTML</b>
-        <input type="radio" name="showPreference" value="preview" onclick="clkPref(this);" checked="checked"> <b>Preview</b>
-      </div>
-    </div>
-    <section class="row" style="padding-top: 22px;">
-        <div class="col-md-6 full-height" style="box-shadow: -10px 13px 6px 10px rgba(0,0,0,0.4);">
-        <textarea  id="plainText" placeholder="Write your Markdown here.." autofocus></textarea>
+  <head>
+      <title>Markdownify</title>
+      <link href="css/bootstrap.min.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/codemirror.css">
+      <link rel="stylesheet" href="css/base16-dark.css">
+  </head>
+  <body class="container-fluid">
+      <div style="position:fixed;top: 0;left: 0;z-index: 999;width: 100%;height: 23px;">
+        <div class="mode">
+          <input type="radio" name="changeTheme" value="light" onclick="changeTheme(this);" checked="checked"> <b>Light</b>
+          <input type="radio" name="changeTheme" value="dark" onclick="changeTheme(this);"> <b>Dark</b>
         </div>
-        <div class="col-md-6 full-height">
-        <div id="markdown"></div>
-        <textarea id="htmlPreview" style="display:none;width:100%;height:100%;"></textarea>
+        <div class="pref">
+          <input type="radio" name="showPreference" value="html" onclick="clkPref(this);"> <b>HTML</b>
+          <input type="radio" name="showPreference" value="preview" onclick="clkPref(this);" checked="checked"> <b>Preview</b>
         </div>
-    </section>
+      </div>
+      <section class="row" style="padding-top: 22px;">
+          <div class="col-md-6 full-height" style="box-shadow: -10px 13px 6px 10px rgba(0,0,0,0.4);">
+          <textarea  id="plainText" placeholder="Write your Markdown here.." autofocus></textarea>
+          </div>
+          <div class="col-md-6 full-height">
+          <div id="markdown"></div>
+          <textarea id="htmlPreview" style="display:none;width:100%;height:100%;"></textarea>
+          </div>
+      </section>
 
-    <script src="js/marked.min.js"></script>
-    <script src="js/codemirror.js"></script>
-    <script src="js/markdown/markdown.js"></script>
-    <script src="js/app.js"></script>
-</body>
+      <script src="js/marked.min.js"></script>
+      <script src="js/codemirror.js"></script>
+      <script src="js/markdown/markdown.js"></script>
+      <script src="js/app.js"></script>
+      <script src="js/functions.js"></script>
+      <script src="js/ipc_renderer.js"></script>
+  </body>
 </html>
