--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           </div>
       </section>
 
-      <script src="js/marked.min.js"></script>
-      <script src="js/codemirror.js"></script>
+      <script src="js/libs/marked.min.js"></script>
+      <script src="js/libs/codemirror.js"></script>
       <script src="js/markdown/markdown.js"></script>
       <script src="js/app.js"></script>
       <script src="js/functions.js"></script>
