--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <div class="col-md-6 full-height" style="box-shadow: -10px 13px 6px 10px rgba(0,0,0,0.4);">
           <textarea  id="plainText" placeholder="Write your Markdown here.." autofocus></textarea>
           </div>
-          <div class="col-md-6 full-height">
+          <div class="col-md-6 full-height" style="overflow-y: auto;">
           <div id="markdown"></div>
           <textarea id="htmlPreview" style="display:none;width:100%;height:100%;"></textarea>
           </div>
