--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p><em>Or</em></p>
 
-<p>Download this project, and run</p>
+<p>Clone this project, and run</p>
 
 <pre><code>$&gt; cd PATH-TO-MARKDOWNIFY-DESKTOP-APP
 $&gt; npm install &amp;&amp; npm start
@@ -59,11 +59,27 @@ $&gt; npm install &amp;&amp; npm start
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
 
 <ul>
-<li>Preview Markdown and generate its relevant HTML.</li>
+<li>LivePreview - Make changes, See changes
+
+<ul>
+<li>Instantly see what your Markdown documents look like in HTML as you create them.</li>
+<li>While you type, LivePreview will automatically scroll to the current location you're editing.</li>
+</ul>
+</li>
 <li>Syntax highlighting</li>
 <li>Dark/Light mode</li>
-<li>Live preview</li>
-<li>Cross platform</li>
+<li>Full screen mode
+
+<ul>
+<li>Write distraction free</li>
+</ul>
+</li>
+<li>Cross platform
+
+<ul>
+<li>Windows, Mac and Linux ready.</li>
+</ul>
+</li>
 </ul>
 
 <h2>
@@ -74,13 +90,9 @@ $&gt; npm install &amp;&amp; npm start
 <h2>
 <a id="tools-used" class="anchor" href="#tools-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools Used</h2>
 
-<p>Electron Markdownify is built on:</p>
-
 <ul>
 <li><a href="http://electron.atom.io/">Electron</a></li>
 <li><a href="https://nodejs.org/">Node.js</a></li>
-<li>a little bit of <a href="https://jquery.com/">jQuery</a>
-</li>
 <li><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></li>
 <li><a href="http://showdownjs.github.io/showdown/">showdown</a></li>
 <li><a href="http://codemirror.net/">CodeMirror</a></li>
