--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <p><em>Or</em></p>
 
-<p>Clone this project, and run</p>
+<p>Clone this repository, and run</p>
 
 <pre><code>$&gt; cd PATH-TO-MARKDOWNIFY-DESKTOP-APP
 $&gt; npm install &amp;&amp; npm start
@@ -68,10 +68,11 @@ $&gt; npm install &amp;&amp; npm start
 </li>
 <li>Syntax highlighting</li>
 <li>Dark/Light mode</li>
+<li>Toolbar for basic Markdown formatting</li>
 <li>Full screen mode
 
 <ul>
-<li>Write distraction free</li>
+<li>Write distraction free.</li>
 </ul>
 </li>
 <li>Cross platform
@@ -85,7 +86,7 @@ $&gt; npm install &amp;&amp; npm start
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h2>
 
-<p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.1">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
+<p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.3">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
 
 <h2>
 <a id="tools-used" class="anchor" href="#tools-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools Used</h2>
