--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="css/codemirror.css">
       <link rel="stylesheet" href="css/base16-dark.css">
       <link rel="stylesheet" href="css/font-awesome.min.css">
+      <link rel="stylesheet" href="css/dialog.css">
   </head>
   <body class="container-fluid">
       <div class="optContainer">
@@ -53,6 +54,9 @@
 
       <script src="js/libs/marked.min.js"></script>
       <script src="js/libs/codemirror.js"></script>
+      <script src="js/libs/search.js"></script>
+      <script src="js/libs/searchcursor.js"></script>
+      <script src="js/libs/dialog.js"></script>
       <script src="js/markdown/markdown.js"></script>
       <script src="js/app.js"></script>
       <script src="js/format.js"></script>
