--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <a href="https://badge.fury.io/js/electron-markdownify">
     <img src="https://badge.fury.io/js/electron-markdownify.svg" alt="Gitter">
   </a>
-
+  <a href="https://gitter.im/amitmerchant1990/electron-markdownify"><img src="https://badges.gitter.im/amitmerchant1990/electron-markdownify.svg"></a>
 </p>
 
 <p><br></p>
