Added support for autoclose brackets

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       <script src="js/libs/search.js"></script>
       <script src="js/libs/searchcursor.js"></script>
       <script src="js/libs/dialog.js"></script>
+      <script src="js/libs/closebrackets.js"></script>
       <script src="js/markdown/markdown.js"></script>
       <script src="js/app.js"></script>
       <script src="js/format.js"></script>
