Replaced global shortcut for Ctrl+T to Ctrl+Shift+T to prevent weird behaviour

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <i class="separator">|</i>
           <a onclick="drawLink();" title="Create Link [Ctrl+L]" class="fa fa-link editor-toolbar"></a>
           <a onclick="drawImage();" title="Insert Image [Ctrl+Alt+I]" class="fa fa-picture-o editor-toolbar"></a>
-          <a onclick="drawTable();" title="Insert Table [Ctrl+T]" class="fa fa-table editor-toolbar"></a>
+          <a onclick="drawTable();" title="Insert Table [Ctrl+Shift+T]" class="fa fa-table editor-toolbar"></a>
           <a onclick="drawHorizontalRule();" title="Insert Horizontal Rule" class="fa fa-minus editor-toolbar"></a>
         </div>
       </div>
