Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <p><img src="https://raw.githubusercontent.com/amitmerchant1990/electron-markdownify/master/img/markdownify.gif" alt="screenshot"></p>
 
 <h2>
-<a id="features" class="anchor" href="#features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Features</h2>
+<a id="key-features" class="anchor" href="#key-features" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Key Features</h2>
 
 <ul>
 <li>LivePreview - Make changes, See changes
@@ -52,6 +52,8 @@
 <li>Instantly see what your Markdown documents look like in HTML as you create them.</li>
 <li>While you type, LivePreview will automatically scroll to the current location you're editing.</li>
 </ul>
+</li>
+<li>GitHub Flavored Markdown<br>
 </li>
 <li>Syntax highlighting</li>
 <li>Dark/Light mode</li>
@@ -89,7 +91,9 @@ $&gt; npm install &amp;&amp; npm start
 <p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.3">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
 
 <h2>
-<a id="tools-used" class="anchor" href="#tools-used" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Tools Used</h2>
+<a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
+
+<p>This software uses code from several open source packages.</p>
 
 <ul>
 <li><a href="http://electron.atom.io/">Electron</a></li>
