--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ $&gt; npm install &amp;&amp; npm start
 <h2>
 <a id="download" class="anchor" href="#download" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Download</h2>
 
-<p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.3">download</a> installable version of Markdownify for Windows, Darwin and Linux.</p>
+<p>You can <a href="https://github.com/amitmerchant1990/electron-markdownify/releases/tag/v1.1.6">download</a> latest installable version of Markdownify for Windows, Darwin and Linux.</p>
 
 <h2>
 <a id="credits" class="anchor" href="#credits" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Credits</h2>
