Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 <li>Syntax highlighting</li>
 <li>Dark/Light mode</li>
 <li>Toolbar for basic Markdown formatting</li>
+<li>App will keep alive in tray for quick usage</li>
 <li>Full screen mode
 
 <ul>
