Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 <li>Syntax highlighting</li>
 <li>Dark/Light mode</li>
 <li>Toolbar for basic Markdown formatting</li>
+<li>Emoji support in preview <g-emoji alias="tada" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f389.png">🎉</g-emoji>
+</li>
 <li>App will keep alive in tray for quick usage</li>
 <li>Full screen mode
 
@@ -102,6 +104,8 @@ $&gt; npm install &amp;&amp; npm start
 <li><a href="https://github.com/chjj/marked">Marked - a markdown parser</a></li>
 <li><a href="http://showdownjs.github.io/showdown/">showdown</a></li>
 <li><a href="http://codemirror.net/">CodeMirror</a></li>
+<li>Emojis are taken from <a href="https://github.com/arvida/emoji-cheat-sheet.com">here</a>
+</li>
 </ul>
 
 <h4>
