Show name,directory and state of file in window title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <title>Markdownify</title>
+      <title>New document - Markdownify</title>
       <link href="css/bootstrap.min.css" rel="stylesheet">
       <link href="css/style.css" rel="stylesheet">
       <link rel="stylesheet" href="css/codemirror.css">
