Extended dark mode into preview section

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             <a id="angleToolBar" title="Toolbar" class="fa fa-angle-double-right" onclick="showToolBar();" style="cursor: pointer;text-decoration:none;"></a>
           </span>
           <span>
-            <input type="radio" name="changeTheme" value="light" onclick="changeTheme(this);" checked="checked"> <label style="vertical-align: middle;"><b>Light</b></label>
-            <input type="radio" name="changeTheme" value="dark" onclick="changeTheme(this);"> <label style="vertical-align: middle;"><b>Dark</b></label>
+            <input type="radio" name="changeTheme" value="light" onclick="changeTheme(this);" title="Light Mode" checked="checked"> <label style="vertical-align: middle;" title="Light Mode"><b>Light</b></label>
+            <input type="radio" name="changeTheme" value="dark" onclick="changeTheme(this);" title="Dark Mode"> <label style="vertical-align: middle;" title="Dark Mode"><b>Dark</b></label>
           </span>
         </div>
         <div class="pref" id="pref">
