Migrated to Electron 1.4.1, added code highlighting and used latest version of marked

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="css/base16-dark.css">
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/dialog.css">
+      <link rel="stylesheet" href="css/default.css">
   </head>
   <body class="container-fluid">
       <div class="optContainer">
