UI related improvements

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
       </div>
       <section class="row" id="editArea" style="padding-top: 24px;">
-          <div class="col-md-6 full-height" style="box-shadow: -10px 13px 6px 10px rgba(0,0,0,0.4);" id="textPanel">
+          <div class="col-md-6 full-height nilMargin" style="box-shadow: -10px 13px 6px 10px rgba(0,0,0,0.4);" id="textPanel">
             <textarea  id="plainText" placeholder="Write your Markdown here.." autofocus></textarea>
           </div>
           <div class="col-md-6 full-height" style="overflow-y: auto;display:block;" id="previewPanel">
