--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <a id="angleToolBar" title="Toolbar" class="fa fa-angle-double-right" onclick="showToolBar();" style="cursor: pointer;text-decoration:none;"></a>
           </span>
           <span>
-            <label style="vertical-align: middle;" title="Light Mode"><input type="radio" name="changeTheme" value="light" onclick="changeTheme(this);" title="Light Mode" checked="checked"> <b>Light</b></label>
-            <label style="vertical-align: middle;" title="Dark Mode"><input type="radio" name="changeTheme" value="dark" onclick="changeTheme(this);" title="Dark Mode"> <b>Dark</b></label>
+            <label style="vertical-align: middle;" title="Light Mode"><input type="radio" name="changeTheme" id="lightThemeRadio" value="light" onclick="changeTheme(this);" title="Light Mode" checked="checked"> <b>Light</b></label>
+            <label style="vertical-align: middle;" title="Dark Mode"><input type="radio" name="changeTheme" id="darkThemeRadio" value="dark" onclick="changeTheme(this);" title="Dark Mode"> <b>Dark</b></label>
           </span>
         </div>
         <div class="pref" id="pref">
@@ -26,8 +26,8 @@
             <label><input type="checkbox" id="syncScroll" checked> Sync Scrolling</label>
           </div>
           <div class="module format">
-            <label><input type="radio" name="showPreference" value="html" onclick="clkPref(this);"> <b>HTML</b></label>
-            <label><input type="radio" name="showPreference" value="preview" onclick="clkPref(this);" checked="checked"> <b>Preview</b></label>
+            <label><input type="radio" name="showPreference" id="htmlRadio" value="html" onclick="clkPref(this);"> <b>HTML</b></label>
+            <label><input type="radio" name="showPreference" id="previewRadio" value="preview" onclick="clkPref(this);" checked="checked"> <b>Preview</b></label>
           </div>
         </div>
       </div>
