Modified meta tags

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="A minimal Markdown editor">
     <meta name="author" content="Amit Merchant">
-    <link rel="icon" href="../../favicon.ico">
+    <link rel="icon" href="favicon.ico">
 
     <meta property="og:title" content="Markdownify" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://www.amitmerchant.com/electron-markdownify/" />
+    <meta property="og:url" content="https://markdownify.js.org/" />
     <meta property="og:description" content="A minimal Markdown editor" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg"/>
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Markdownify" />
+    <meta name="twitter:creator" content="@amit_merchant">
     <meta name="twitter:description" content="A minimal Markdown editor" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg">
     <meta name="theme-color" content="#4CAF50">
     <title>Markdownify</title>
 
