Changed theme color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta name="twitter:creator" content="@amit_merchant">
     <meta name="twitter:description" content="A minimal Markdown editor" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg">
-    <meta name="theme-color" content="#4CAF50">
+    <meta name="theme-color" content="#3F51B5">
     <title>Markdownify</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
