--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="text-center">
-        <img src="img/markdownify-macos.png" class="img-responsive custom-image">
+        <img src="https://raw.githubusercontent.com/amitmerchant1990/test/master/final-retina-macbookpro-mockup.png" class="img-responsive custom-image">
       </div>
     </div>
 
