--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:description" content="A minimal Markdown editor" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg">
     <meta name="theme-color" content="#3F51B5">
-    <title>Markdownify</title>
+    <title>Markdownify - A minimal Markdown editor</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
