--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ $ npm start
     <hr>
 
     <footer>
-      <p class="text-center">&copy; 2016 <a href="https://www.amitmerchant.com/">Amit Merchant</a>.</p>
+      <p class="text-center">Created by <a href="https://www.amitmerchant.com/">Amit Merchant</a>.</p>
     </footer>
 
     <!-- Bootstrap core JavaScript
