Added support for KaTeX syntax

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/dialog.css">
       <link rel="stylesheet" href="css/default.css">
+      <link rel="stylesheet" href="css/katex.min.css">
   </head>
   <body class="container-fluid">
       <div class="optContainer">
@@ -41,6 +42,8 @@
           <a onclick="toggleBlockquote();" title="Quote" class="fa fa-quote-left editor-toolbar"></a>
           <a onclick="toggleUnorderedList();" title="Unordered List" class="fa fa-list-ul editor-toolbar"></a>
           <a onclick="toggleOrderedList();" title="Ordered List" class="fa fa-list-ol editor-toolbar"></a>
+          <i class="separator">|</i>
+          <a onclick="toggleLatex();" title="Math" class="fa fa-superscript editor-toolbar"></a>
           <i class="separator">|</i>
           <a onclick="drawLink();" title="Create Link [Ctrl+L]" class="fa fa-link editor-toolbar"></a>
           <a onclick="drawImage();" title="Insert Image [Ctrl+Alt+I]" class="fa fa-picture-o editor-toolbar"></a>
