--- a/index.html
+++ b/index.html
@@ -87,6 +87,8 @@
 
     <div class="container">
       <div class="row text-center">
+        <script src="https://codefund.io/scripts/f0a32f26-7d8a-48d9-917a-a6bdd408d44a/embed.js"></script>
+        <div id="codefund_ad"></div>
         <div>
           <h4>Other features including...</h4>
           <ul class="center" type="square">
