--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="A minimal Markdown editor">
+    <meta name="description" content="A minimal Markdown editor for Windows, macOS and Linux">
     <meta name="author" content="Amit Merchant">
+    <meta name="keywords" content="markdown,editor,minimal,macos,windows,desktop,linux,opensoure,free,cross-platform" />
     <link rel="icon" href="favicon.ico">
 
     <meta property="og:title" content="Markdownify" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://markdownify.js.org/" />
-    <meta property="og:description" content="A minimal Markdown editor" />
+    <meta property="og:description" content="A minimal Markdown editor for Windows, macOS and Linux" />
     <meta property="og:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg"/>
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Markdownify" />
     <meta name="twitter:creator" content="@amit_merchant">
-    <meta name="twitter:description" content="A minimal Markdown editor" />
+    <meta name="twitter:description" content="A minimal Markdown editor for Windows, macOS and Linux" />
     <meta name="twitter:image" content="https://raw.githubusercontent.com/amitmerchant1990/test/master/markdownify-mockup1920-1.jpg">
     <meta name="theme-color" content="#001371">
-    <title>Markdownify - A minimal Markdown editor</title>
+    <title>Markdownify - A minimal Markdown editor for Windows, macOS and Linux</title>
 
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
