Update footer text

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ $ npm start
       <div class="row text-center credits">
         <div>
           <h2 class="key_features">Credits</h2>
-          <p>Markdowinfy is built using <a href="http://electron.atom.io/">Electron</a>, <a href="https://nodejs.org/">Node.js</a> and some <a href="https://github.com/amitmerchant1990/electron-markdownify#credits">more</a>.</p>
+          <p>Markdowinfy is built using <a href="http://electron.atom.io/">Electron</a>, <a href="https://nodejs.org/">Node.js</a> and some <a href="https://github.com/amitmerchant1990/electron-markdownify#credits">more awesome software packages</a>.</p>
         </div>
       </div>
     </div>
