--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <li>Full screen mode</li>
             <li>Supports multiple cursors</li>
             <li>Save the Markdown preview as PDF</li>
+            <li><a href="https://khan.github.io/KaTeX/" target="_blank">KaTeX</a> Support</li>
             <ul>
               <li>Write distraction free.</li>
             </ul>
