--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <p> Syntax highlighting in fenced code blocks with language identifiers and Markup languages  </p>
         </div>
         <div class="col-md-4">
-          <h3>⬛ Dark/Light mode</h3>
+          <h3>☯ Dark/Light mode</h3>
           <p>Change the color scheme of the editor based on your preferences. i.e to choose between Dark mode/Light mode </p>
        </div>
         <div class="col-md-4">
