--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <p>Change the color scheme of the editor based on your preferences. i.e to choose between Dark mode/Light mode </p>
        </div>
         <div class="col-md-4">
-          <h3>😜 Emoji support</h3>
+          <h3>❤️ Emoji support</h3>
           <p>Supports emojis in the preview mode for when you need to express yourself via one</p>
         </div>
       </div>
