--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div>
         <p><img src="https://raw.githubusercontent.com/amitmerchant1990/electron-markdownify/master/img/markdownify.png" class="img-responsive logo-image text-center"></p>
           <p>
-            <i class="tagline">A minimal Markdown editor</i>
+            A minimal Markdown editor
           </p>
         </div>
         <div>
