--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <div class="text-center">
             <h2 class="key_features">Develop</h2>
           </div>
-          <div>
+          <div class="develop">
               <p>To clone and run this application, you'll need <a href="https://git-scm.com/">Git</a> and <a href="https://nodejs.org/en/download/">Node.js</a> (which comes with <a href="http://npmjs.com/">npm</a>) installed on your computer. From your command line:</p>
           </div>
           <div>
