More CSS changes

--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
         <h2 class="key_features">Key Features</h2>
       </div>
       <div class="row">
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile purple-tile">
           <div class="tile">
             <h3>📔 LivePreview</h3>
             <p> <b>Make changes, See changes</b>. Instantly see what your Markdown documents look like in HTML as you create them. </p>
           </div>
         </div>
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile green-tile">
           <div class="tile">
             <h3>📜 Sync Scrolling</h3>
             <p>While you type, <b>LivePreview</b> will automatically scroll to the current location you're editing. </p>
           </div>
        </div>
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile pink-tile">
           <div class="tile">
             <h3>🔧 GFM</h3>
             <p>The good old <b>GitHub Flavored-style</b> Markdown. So, you don't feel out of the place.</p>
@@ -75,19 +75,19 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile yellow-tile">
           <div class="tile">
             <h3>🌈 Syntax highlighting</h3>
             <p> Syntax highlighting in fenced code blocks with language identifiers and Markup languages  </p>
           </div>
         </div>
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile blue-tile">
           <div class="tile">
             <h3>☯ Dark/Light mode</h3>
             <p>Change the color scheme of the editor based on your preferences. i.e to choose between Dark mode/Light mode </p>
           </div>
        </div>
-        <div class="col-md-4 outer-tile">
+        <div class="col-md-4 outer-tile maroon-tile">
           <div class="tile">
             <h3>❤️ Emoji support</h3>
             <p>Supports emojis in the preview mode for when you need to express yourself via one</p>
